compiler-core/src/docs/snapshots/gleam_core__docs__tests__constructor_with_long_types_and_many_fields_that_need_splitting.snap
---
source: compiler-core/src/docs/tests.rs
expression: output
---
---- SOURCE CODE
-- option.gleam
pub type Option(a)

-- main.gleam

import option

pub type TypeWithAVeryLoooooooooooooooooooongName

pub type Wibble {
    Wibble(
        wibble: #(TypeWithAVeryLoooooooooooooooooooongName, TypeWithAVeryLoooooooooooooooooooongName),
        wobble: option.Option(String),
    )
}


---- TYPES

--- TypeWithAVeryLoooooooooooooooooooongName
<pre><code>pub type TypeWithAVeryLoooooooooooooooooooongName</code></pre>

--- Wibble
<pre><code>pub type Wibble {
  Wibble(
    wibble: #(
      TypeWithAVeryLoooooooooooooooooooongName,
      TypeWithAVeryLoooooooooooooooooooongName,
    ),
    wobble: option.Option(String),
  )
}</code></pre>

-- CONSTRUCTORS

<pre><code>Wibble(
  wibble: #(
    TypeWithAVeryLoooooooooooooooooooongName,
    TypeWithAVeryLoooooooooooooooooooongName,
  ),
  wobble: option.Option(String),
)</code></pre>
