compiler-core/src/docs/snapshots/gleam_core__docs__tests__discarded_arguments_are_not_shown.snap
---
source: compiler-core/src/docs/tests.rs
expression: "html_page_to_string(compile(config, modules), vec![\".member:has(#discard)\"])"
---
<!-- Page: app.html -->

<!-- Selector: .member:has(#discard) -->
<div class="member">
    <div class="member-name">
      <h2 id="discard">
        <a href="#discard">
          discard
        </a>
      </h2>
      
    </div>

    <pre><code class="hljs gleam">pub fn discard(discarded: a) -&gt; Int</code></pre>
    
    <div class="rendered-markdown"></div>
  </div>
