compiler-core/src/docs/snapshots/gleam_core__docs__tests__docs_of_a_type_constructor_are_not_used_by_the_following_function.snap
---
source: compiler-core/src/docs/tests.rs
expression: "html_page_to_string(compile(config, modules),\nvec![\".member:has(#Wibble)\", \".member:has(#main)\"])"
---
<!-- Page: app.html -->

<!-- Selector: .member:has(#Wibble) -->
<div class="member">
    <div class="member-name">
      <h2 id="Wibble">
        <a href="#Wibble">
          Wibble
        </a>
      </h2>
      
    </div>
    
    <div class="custom-type-constructors">
      <div class="rendered-markdown"></div>
      <pre><code class="hljs gleam">pub type Wibble {
  Wobble(wabble: Int)
}</code></pre>
      
      <h3>
        Constructors
      </h3>
      <ul class="constructor-list">
        
        <li class="constructor-item">
          <div class="constructor-row">
            <svg class="icon icon-star"><use xlink:href="#icon-star"></use></svg>
            <pre class="constructor-name"><code class="hljs gleam">Wobble(wabble: Int)</code></pre>
          </div>

          <div class="constructor-item-docs">
            

            
            <h4>
              Arguments
            </h4>

            <dl class="constructor-argument-list">
            
              <dt class="constructor-argument-label">
                wabble
              </dt>
              <dd class="constructor-argument-doc">
                <p>Documentation!!</p>

              </dd>
            
            </dl>
            
          </div>
        </li>
        
      </ul>
      
    </div>
  </div>

<!-- Selector: .member:has(#main) -->
<div class="member">
    <div class="member-name">
      <h2 id="main">
        <a href="#main">
          main
        </a>
      </h2>
      
    </div>

    <pre><code class="hljs gleam">pub fn main() -&gt; a</code></pre>
    
    <div class="rendered-markdown"></div>
  </div>
