compiler-core/src/docs/snapshots/gleam_core__docs__tests__function_does_not_use_unqualified_imported_non_reexport_alias.snap
---
source: compiler-core/src/docs/tests.rs
assertion_line: 1216
expression: output
---
---- SOURCE CODE
-- thepackage/aliases.gleam
pub type Aliased = Result(Int, String)

-- main.gleam

import thepackage/aliases.{type Aliased}

pub fn do_thing(value: Result(Int, String)) -> Result(Int, String) {
  value
}


---- VALUES

--- do_thing
<pre><code>pub fn do_thing(
  value: Result(Int, String),
) -> Result(Int, String)</code></pre>
